--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-auth": "^4.6.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.33.0"
+    "react-hook-form": "^7.33.0",
+    "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
